Fix the layout issue

--- a/_sass/minima/skins/classic.scss
+++ b/_sass/minima/skins/classic.scss
@@ -10,8 +10,8 @@ $text-color:            #111111 !default;
 $background-color:      #fdfdfd !default;
 $code-background-color: #eeeeff !default;
 
-$link-base-color:       #2a7ae2 !default;
-$link-visited-color:    darken($link-base-color, 15%) !default;
+$link-base-color:       #6197DD !default;
+$link-visited-color:    darken($link-base-color, 0%) !default;
 $link-hover-color:      $text-color !default;
 
 $border-color-01:       $brand-color-light !default;
